2005-05-07  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkscreen-x11.c (gdk_screen_get_width_mm) 
	(gdk_screen_get_height_mm): Fix typos in the docs.  (#303389,
	Masao Mutoh)

2005-05-07  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtkiconview.c: Fix a copy-and-paste accident, spotted
	by Owen Taylor.

2005-05-07  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkgc.c (gc_get_foreground): Get the foreground color, not
	the background color.

2005-05-07  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixbuf-render.c gdk/gdkpixbuf.h (gdk_pixbuf_set_as_cairo_source): 
	Change prototype to match cairo_set_source_surface().

	* gdk/gdkdraw.c gdk/gdkgc.c gdk/gdkpixbuf-render.c gdk/gdkwindow.c
	gtk/gtkhsv.c tests/testcairo.c.

2005-05-06  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-6:

	* gtk/gtkfilesystemunix.c (fill_in_mime_type): Don't fill the mime
	types if this is an AFS directory.
	(fill_in_names): If we are in an AFS directory, set the MIME type
	blindly to "x-directory/normal".

2005-05-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_insert_page_menu): Always
	initialize child-visible to FALSE, otherwise we may end up
	with the wrong page visible initially.  (#302283, Patrik Fimml)

	* gtk/gtktreeview.c (gtk_tree_view_draw_arrow): Make expanders
	appear insensitive in insensitive treeviews. 

2005-05-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoolbar.c: Fix a typo in the docs.  (#303024, 
	Morten Welinder)

2005-05-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkiconview.[hc]: Add DND support similar to the DND
	support in the tree view.  (#150270)

2005-05-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreednd.h: 
	* gtk/gtkwidget.h: Small cleanups.

	* gtk/gtktreeview.c (gtk_tree_view_get_dest_row_at_pos): Fix
	a typo.

2005-05-04  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c gdk/x11/gdkwindow-x11.h: Fix a bug